documents/examples/good/small/exception.latf
int main() {
    // int x = 1 / 0; // Runtime exception
    // int x = 1 % 0; // Runtime exception
    return 0;
}