documents/examples/bad/10-exception.latf
int main() {
    int x = 1 / 0; // Runtime exception
    return 0;
}